--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build:web": "expo export:web",
+    "deploy": "npm run build:web && firebase deploy --only hosting"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
