iOS expo go page change bug fix

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.ms2025.babytrackerapp",
+      "bundleIdentifier": "com.shiroikumo.babytrackerapp",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
