--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-device-info": "^10.0.0",
     "react-native-echarts-wrapper": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "~1.11.0",
