--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -2,10 +2,11 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on merge
-on:
-  push:
-    branches:
-      - master
+# Disabled automatic deployment
+# on:
+#   push:
+#     branches:
+#       - master
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
